--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,5 @@
-index.file=index.php
+browser.id=Chrome.INTEGRATED
+copy.src.on.open=false
+index.file=index.html
+run.as=LOCAL
 url=http://localhost/hhcorp/
